added some more comments

--- a/notebooks/1b Simple Linear Dynamical System.ipynb
+++ b/notebooks/1b Simple Linear Dynamical System.ipynb
@@ -113,6 +113,9 @@
     "$As$ was cleaverly created; $bs$ is random.\n",
     "### sample function\n",
     " $z$ stores the switching variable, it is an *int*<br>x stores the latent state-vector<br>y stores the observations<br>\n",
+    " The sampling functions use $\\Sigma$ and $\\Sigma_{init}$ matrices. How are these initialized?<br>\n",
+    " These are properties so are not initialized but their value is calculated when called (observations.py @ line: 755). Under class AutoRegressiveObservations(_AutoRegressiveObservationsBase) self._sqrt_Sigmas_init is defined: $\\sqrt{\\Sigma_{init}} = \\begin{matrix} 1 & 0 \\\\ 0 & 1 \\end{matrix}$. self._sqrt_Sigmas is drawed: $\\sqrt{\\Sigma} \\sim N(0,1)$ (each entry). At run time (observations.py @ line: 760) self.Sigmas is created: $\\Sigma = \\sqrt{\\Sigma} {\\sqrt{\\Sigma}}^T$ <br>\n",
+    " \n",
     " **sample_x** function uses the matrices saved within the object: D, As, bs, Vs = self.D, self.As, self.bs, self.Vs<br>\n",
     " Here we have a single LDS so $z=0$ for all time-tags. The object stores $\\Sigma_{init},\\mu_{init}$ from which $x[0]$ is created: $x[0]=\\mu_{init} + S \\cdot N(0,I)$ where $S$ is the Cholesky decomposition of the covariance matirx $\\Sigma_{init} = SS^H$. <br> \n",
     " \n",
